fix: optimize order process for nobody user on mobile devices

--- a/src/QUI/ERP/Order/Controls/OrderProcess.css
+++ b/src/QUI/ERP/Order/Controls/OrderProcess.css
@@ -371,6 +371,12 @@
     width: 100%;
 }
 
+@media screen and (min-width: 768px) {
+    .quiqqer-order-ordering-nobody-tabs-main__btnBack {
+        display: none;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .quiqqer-order-ordering-nobody__intro {
         margin-bottom: 3rem;
